work samples on click links visibility fixed

--- a/assets/custom/css/FontAwesome-Custom.css
+++ b/assets/custom/css/FontAwesome-Custom.css
@@ -118,3 +118,8 @@
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: var(--gray-cety);
 }
+.fa.fa-eye{
+    color: transparent;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: var(--white-cety);
+}
