--- a/assets/custom/css/Style.css
+++ b/assets/custom/css/Style.css
@@ -108,4 +108,17 @@ textarea::placeholder {
 	padding-bottom: 20px !important;
 }
 
+.review-theme {
+	position: absolute;
+	top: 0;
+	opacity: 0;
+	/*display: none;*/
+	visibility: hidden;
+	background-color: var(--dark-cety);
+	border-radius: 0.25rem;
+	width: 100%;
+	height: 100%;
+}
+
+
 /*----------end custom style part----------*/
